--- a/training.ipynb
+++ b/training.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# New NoteBook with Jupyter! Wow Andaconda is fucking revolutionary!! TENSORFLOW IS SO STUPID! OR MAYBE IM JUST STUPID! WHO KNOWS!!!!"
+    "# New NoteBook with Jupyter!"
    ]
   },
   {
